AX: expose focusable elements even if element or ancestor has aria-hidden=true https://bugs.webkit.org/show_bug.cgi?id=220534 <rdar://problem/71865875>

Reviewed by Zalan Bujtas.

Source/WebCore:

ARIA states that if an item is focused, then it should override aria-hidden status.
https://github.com/w3c/aria/pull/1387/files

Test: accessibility/focusable-inside-hidden.html

* accessibility/AXObjectCache.cpp:
(WebCore::isNodeAriaVisible):
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isAXHidden const):
(WebCore::AccessibilityObject::setIsIgnoredFromParentDataForChild):

LayoutTests:

* accessibility/focusable-inside-hidden-expected.txt: Added.
* accessibility/focusable-inside-hidden.html: Added.


Canonical link: https://commits.webkit.org/233716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272390 268f45cc-cd09-0410-ab3c-d52691b4dbfc